# GridCellsTheta

./: .gitignore  amit_bose_diffeq.ipynb  amitabha_bose.ipynb  default_model_params.json  fake_stellate.py  generate_stell_dc.py  interneuron_amb.py  interneuron_test.py  matlab_processor.py  phase_prec_final.ipynb  phase_prec_hf.py  phase_prec_w_intrnrns.ipynb  phs_prec_v_slope.ipynb  pyproject.toml  single_stell.ipynb  stell_sweep_0.sh  stellate.py  stellate_phpc_2.ipynb  stellate_phpc_analysis.ipynb  success_pp.ipynb  testing_matlab.py  unfiltered_processor.py
analysis/PHPC/: PHPC-DEMO-S-s-1a.ipynb
hafting_grid_cell_data/: .~lock.list_of_cells_and_layers.xlsx#  l2c4_0.maT  list_of_cells_and_layers.xlsx  testing_hafting.m
mod/: fake_stellate_mech.mod
network_configs/connections/: 1d_phpc_config.py
network_configs/instrumentations/: 1d_phpc_instr.py  trajectory1D.py
phase_prec/: pyproject.toml
specs/fig2/: fig2_a.py
specs/phpc/: phpc.py
specs/phpc/stell_dc_sweeps_1/: PHPC-DEMO-IDCS-S-s-1.py  PHPC-DEMO-IDCS-S-s-10.py  PHPC-DEMO-IDCS-S-s-11.py  PHPC-DEMO-IDCS-S-s-12.py  PHPC-DEMO-IDCS-S-s-13.py  PHPC-DEMO-IDCS-S-s-14.py  PHPC-DEMO-IDCS-S-s-15.py  PHPC-DEMO-IDCS-S-s-2.py  PHPC-DEMO-IDCS-S-s-3.py  PHPC-DEMO-IDCS-S-s-4.py  PHPC-DEMO-IDCS-S-s-5.py  PHPC-DEMO-IDCS-S-s-6.py  PHPC-DEMO-IDCS-S-s-7.py  PHPC-DEMO-IDCS-S-s-8.py  PHPC-DEMO-IDCS-S-s-9.py
specs/phpc/stell_dc_sweeps_2/: PHPC-DEMO-IDCS-S-2-1.py  PHPC-DEMO-IDCS-S-2-10.py  PHPC-DEMO-IDCS-S-2-11.py  PHPC-DEMO-IDCS-S-2-12.py  PHPC-DEMO-IDCS-S-2-13.py  PHPC-DEMO-IDCS-S-2-14.py  PHPC-DEMO-IDCS-S-2-15.py  (+13 more)
(+25 files in other folders)
